--- a/CSS/bblaudiosamples.css
+++ b/CSS/bblaudiosamples.css
@@ -5,72 +5,79 @@ body,html {
 
 
 ul {
-    list-style-type:	none;
-	margin:				0px;
-	padding:			0px;
-    /*overflow: 			hidden;*/
-    background-color: 	rgb(0, 0, 0);
-    font-size: 0;
-    z-index: 100;
-    text-align: center;
-  
-  
+  list-style-type:	none;
+margin:				0px;
+padding:			0px;
+  /*overflow: 			hidden;*/
+  background-color: 	rgb(0, 0, 0);
+  font-size: 0;
+  z-index: 100;
+  text-align: center;
+
+
 }
 
 li {
-    display: 	inline-block;
-    padding:			14px 16px;
-  
+  display: 	inline-block;
+  padding:			15px 50px;
+  text-align:			center;
+
 }
 
 li a.active {
-	background-color: 	rgb(95, 71, 30);
+background-color: 	rgb(95, 71, 30);
 }
 
 li a, .dropbtn {
-    display:			inline-block;
-    color:				white;
-    text-align:			center;
-    padding:			14px 16px;
-    text-decoration:	none;
-	width:				150%;
-    font-size: initial;
+  display:			inline-block;
+  color:				white;
+  text-align:			center;
+  padding:			20px 40px;
+  text-decoration:	none;
+width:				130%;
+  font-size: initial;
 }
 
 li a:hover, .dropdown:hover .dropbtn {
-  background-color: 	rgb(95, 71, 30);
+background-color: 	rgb(95, 71, 30);
+border-radius: 25px;
+text-align:			center;
 }
+p.solid {border-style: solid;}
 
 .dropdown {
-    display:	inline-block;
-	position:	relative;
+  display:	inline-block;
+position:	relative;
+text-align:			center;
 }
 
 .dropdown-content {
-    display: 			none;
-    position: 			absolute;
-    background-color: 	rgb(255, 255, 255);
-    width: 				160px;
-    box-shadow: 		5px 10px 10px rgba(0,0,0,0.3);
-	z-index: 			1;
+  display: 			none;
+  position: 			absolute;
+  background-color: 	beige;
+  width: 				75%;
+  border-radius: 25px;
+  box-shadow: 		5px 10px 10px rgba(0,0,0,0.3);
+z-index: 			1;
 }
 
 .dropdown-content a {
-    color: 				black;
-    padding: 			12px 16px;
-    text-decoration: 	none;
-    display: 			block;
-    text-align: 		left;
-	width:				128px;
-	z-index: 			1;
+  color: 				black;
+  font-size: 18px;
+  text-align:	center;
+  padding: 			12px 16px;
+  text-decoration: 	none;
+  display: 			block;
+  width:				100%;
+  z-index: 			1;
 }
 
 .dropdown-content a:hover {
-	background-color: 	rgb(140, 185, 220);
+background-color: 	rgb(114, 93, 52);
 }
 
 .dropdown:hover .dropdown-content {
-    display:	block;
+  display:	block;
 }
 
 /* The sticky class is added to the navbar with JS when it reaches its scroll position */
@@ -197,5 +204,43 @@ body {
     text-align: center;
     padding: 3px;
     background-color: rgb(22, 17, 8);
+    color: white;
+  }
+  .UPAPpic{
+    border-radius: 20%;
+    padding: 20px;
+  }
+  .CUtext{
+    color: beige;
+    font-size: 110%;
+    padding: 20px;
+  }
+  .fa {
+  padding: 10px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 20px 15px;
+  border-radius: 50%;
+}
+  .fa-facebook {
+    background: #3B5998;
+    color: white;
+  }
+  .fa:hover {
+    opacity: 0.7;
+}
+
+  .fa-twitter {
+    background: #55ACEE;
+    color: white;
+  }
+  .fa-youtube {
+    background: #bb0000;
+    color: white;
+  }
+  .fa-instagram {
+    background: #125688;
     color: white;
   }
